--- a/views/default/index.html
+++ b/views/default/index.html
@@ -6,6 +6,12 @@
 </head>
 <body ng-app="myApp" ng-controller="karaokeController">
 
+    <label>Search by Song:</label>
+    <input type="text" ng-model="search.title" />
+    <br>
+    <label>Search by Artist:</label>
+    <input type="text" ng-model="search.artist" />
+
 <table>
     <tr>
         <th>
@@ -16,7 +22,7 @@
             <a href="" ng-click="sortItem = 'artist'; reverse=!reverse">Artist</a>
         </th>
     </tr>
-    <tr ng-repeat="song in songs | orderBy:sortItem:reverse">
+    <tr ng-repeat="song in songs | filter:search | orderBy:sortItem:reverse">
         <td>{[{ song.title }]}</td>
         <td>{[{ song.artist }]}</td>
     </tr>
